controller fix